# VL_EingebetteteSysteme

./: 00_Einfuehrung  00_Einfuehrung.md  01_HistorischerUeberblick  01_HistorischerUeberblick.md  02_BoolscheAlgebra  02_BoolscheAlgebra.md  03_Minimierung.md  04_Schaltnetze.md  05_FlipFlops.md  05_Schaltnetze.md  05_Standardschaltnetze.md  06_FlipFlops.md  06_Schaltwerke.md  07_Schaltwerke.md  08_StandardSchaltwerke.md  09_Rechnerarithmetik.md  10_CPU_Basis.md  11_Modell_CPU.md  12_RISC_CISC.md  13_AVR_CPU.md  14_ADC.md  15_TimerUndInterrupts.md  16_Aktoren.md  CHANGELOG.md  README.md  config.md  index.html
.github/: copilot-instructions.md
.github/workflows/: authors.txt  generatePdf.yml  generateTex.yml  head.tex  main.yml  preprocessing.py
echartCode/05_FlipFlops/: timing_temp_monitor.js
exampleCode/03_Minimierung/: README.md  main.py  manim.cfg  pyproject.toml
exampleCode/13_AVR_CPU/: Makefile  main.asm  main.c  main.elf  main.hex
exampleCode/logikgatter/: logikgatter.ino
files/04_Schaltnetze/: 2BitAdr_Demux.json  2BitAdr_Mux.json  3_8_decoder.json  8_3_coder.json  bcd_animation.odg  or_aus_nand.json  vorlage.json
files/05_FlipFlops/: ansatz_2.json  ansatz_3.json  d_latch.json  dlatch_plan.odg  sr_latch_nor_nand.json
files/06_Schaltwerke/: einzenerkenner.json  einzenerkenner_mealy.json  einzenerkenner_moore.json  jkff.json  jkffbeispiel.json
files/09_Rechnerarithmetik/: halbaddierer.json  volladdierer.json
files/digisim/: and_aus_nand.json  not_aus_nand.json
images/01_Historie/: RelaisSpeicherSchaltung.pptx
programs/: index.html
(+80 files in other folders)
