[tool.poetry]
name = "manim-demo"
version = "0.1.0"
description = ""
authors = ["Sebastian Zug <sebastian.zug@informatik.tu-freiberg.de>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
manim = "^0.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
